# Rust-Unix-Shell

./: .gitignore  Cargo.toml  Dockerfile  README.md  init-fs.sh  input.json  note
dummy-files/: Australia.tif  Brazil.tif  Egypt.tif  Quiz13.docx  Quiz8.docx  as1.docx  as2.docx  as4.doc  continent.csv  neighbors.csv
src/: attribute_background.rs  input_redirection.rs  ls.rs  ls_color.rs  ls_tree.rs  main.rs  pipe_operator.rs  rev_search.rs  rmallexn.rs  sortbyname.rs  sortbytype.rs  util.rs  validator.rs
